# convex-hull-assignment-Malchyrus

./: CMakeLists.txt  README.md  drawingcanvas.cpp  drawingcanvas.h  drawingwindow.cpp  drawingwindow.h
